WEB-10040 : Updated typo

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -2,7 +2,7 @@
     <div class="rc-card-row">
         {{#each items}}
         <div class="rc-card-col">
-            <a class="{{isVideoModel assetLink}}" target="{{addTarget assetLink}}"href="{{assetLink}}" {{{analyticsAttributes}}}>
+            <a class="{{isVideoModal assetLink}}" target="{{addTarget assetLink}}"href="{{assetLink}}" {{{analyticsAttributes}}}>
             <div class="simple-card bg-white" style="height: 310px;">
                 <div class="card-header" style="{{#if thumbnail}}margin-top:35%;{{/if}}">
                     <h4>{{type}}</h4>
