Guided tour and design features fix

--- a/front-end/Assets/src/support-central-angular/src/app/app.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div adapt-focus-tracker></div>
 <div *ngIf="!mobile" class="container">
   <div class="tile-block" [ngClass]="{'extended': isExtendedOpen}"
     [@openCloseTiles]="isExtendedOpen ? 'closed' : 'open'" #tileBlock>
