--- a/front-end/Assets/src/support-central-angular/src/app/app.component.scss
+++ b/front-end/Assets/src/support-central-angular/src/app/app.component.scss
@@ -131,6 +131,7 @@ adapt-select {
         .mobile-widget-container {
             & {
                 display: flex;
+                position: relative;
             }
             .router-container {
                 width: 95%;
