--- a/front-end/Assets/src/css/modules/_support_personalized.scss
+++ b/front-end/Assets/src/css/modules/_support_personalized.scss
@@ -51,6 +51,8 @@
 	.psc-checklist-left {
 		& {
 			margin-right: 10px;
+			min-width: 73px;
+    		text-align: center;
 		}
 		span {
 			font-size: 55px;
@@ -77,10 +79,13 @@
 	cursor: pointer;
 }
 
-@media (min-width: 440px) {
+@media (max-width: 600px) {
 	.support-search.psc {
 		.CoveoSearchInterface .CoveoSearchbox {
-			margin-right: 0px;
+			margin-right: 15px;
+		}
+		.contextual-tooltip {
+			right: 0;
 		}
 	}
 }
@@ -98,7 +103,7 @@
 	.news-container-wrapper {
 		overflow: hidden;
 		margin-right: 25px;
-		margin-left: 20px;
+		margin-left: 25px;
 	}
 
 	.news-list {
@@ -140,12 +145,13 @@
 				color: #AFB1B3;
 			}
 		}
-	}
-
-	.news-block h3 {
-		text-overflow: ellipsis;
-		& a {
-			font-size: 18px;
+		h3 {
+			text-overflow: ellipsis;
+			overflow: hidden;
+			a {
+				font-size: 18px;
+				line-height: 21px;
+			}
 		}
 	}
 
@@ -159,6 +165,7 @@
 		justify-content: center;
 		font-size: 40px;
 		width:50px;
+		cursor: pointer;
 	}
 
 	.left-news-arrow {
@@ -183,8 +190,12 @@
 			padding-bottom: 15px;
 		}
 		& > div {
-			justify-content: center;
-			width: 100%;
+			justify-content: left;
+			min-width: 320px;
+			margin: auto;
+		}
+		& > div:nth-child(3) {
+			margin-right: auto;
 		}
 	}
 	.psc-news  {
