--- a/front-end/Assets/src/support-central-angular/src/styles.scss
+++ b/front-end/Assets/src/support-central-angular/src/styles.scss
@@ -186,6 +186,7 @@ app-root {
 @media (max-width: 1200px) {
   .extended-widget-container {
     padding: 20px 5px;
+    min-height: inherit;
   }
 }
 
@@ -231,4 +232,10 @@ div.introjs-tooltip {
   div.introjs-arrow {
     display: none!important;
   }
+}
+
+// adapt tooltip fix 
+
+.adapt-tooltip-inner {
+  opacity: 0;
 }
