--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -510,7 +510,7 @@ body.no-scroll{
         box-shadow: none;
         background: #ebf2f7;
         transition: 0.3s linear;
-        .card-footer-action {
+        .card-footer {
           transition: 0.3s linear;
           color: #fff !important;
           //  white action icons
