--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/video-data/video-data.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/video-data/video-data.html
@@ -1,6 +1,7 @@
 <h2>Video Data</h2>
 <ul data-sly-use.video="com.bmc.components.VideoData">
-    <sly data-sly-test="video.learnMore">
+     <!--/* WEB-9202 Added learn-more and videoLength fields to component  */-->
+    <sly data-sly-test="${video.learnMore}">
         <sly data-sly-test.className="learn-more"></sly>
      </sly>
     <li><strong>Type:</strong> ${video.typeName}</li>
@@ -9,7 +10,7 @@
     <li><strong>Description:</strong> ${video.description @ context = 'html'}</li>
     <li><strong>Length:</strong> ${video.videoLength @ context = 'html'}</li>
 <sly data-sly-test="${video.isYouTube}">
-    <li class ="${className}"><strong>Overlay Text:</strong> ${video.overlayText}</li>
+    <li class ="${className}"><strong>Overlay Text:</strong> ${video.overlayText @ context = 'html'}</li>
     <li><strong>Overlay URL:</strong> ${video.overlayUrl}</li>
 </sly>
 </ul>
