--- a/front-end/Assets/src/support-central-angular/src/app/product-compatibility/product-compatibility.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/product-compatibility/product-compatibility.component.html
@@ -1,7 +1,7 @@
 <div class="extended-widget-container">
     <div class="extended-widget-header">
       <div class="top-section">
-        <h2>Product Downloads</h2><a class="external-app-link btn btn-primary" [href]="state.widgets.prdDownloads" target="_blank">Go to the Download Center</a>
+        <h2>Product Compatibility</h2><a class="external-app-link btn btn-primary" [href]="state.widgets.prdCompatibility" target="_blank">Go to Product Compatibility</a>
       </div>
       <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}
         <a *ngIf="state.user.loggedIn === 'true'"
