--- a/front-end/Assets/src/support-central-angular/src/app/product-compatibility/product-compatibility.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/product-compatibility/product-compatibility.component.html
@@ -3,7 +3,7 @@
       <div class="top-section">
         <h2>Product Compatibility</h2><a class="external-app-link btn btn-primary" [href]="state.widgets.prdCompatibility" target="_blank">Go to Product Compatibility</a>
       </div>
-      <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? widgetDescription : DESCRIPTION_NON_LOGGED_IN}}
+      <div class="description"  *ngIf="state.hasUserActivity !== null">{{state.hasUserActivity ? DESCRIPTION_LOGGED_IN : DESCRIPTION_NON_LOGGED_IN}}
         <a *ngIf="state.user.loggedIn === 'true'"
           href="https://www.bmc.com/available/create-modify-pn-subscription-list.html" target="_blank" class="ml-3"
           adaptPopover="Click here to edit your favorite Products and alert subscription"
