--- a/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
@@ -1,7 +1,7 @@
 <div class="extended-widget-container">
     <div class="extended-widget-header">
         <div class="top-section">
-            <h2>Services and Consulting</h2><a class="external-app-link btn btn-primary" 
+            <h2>Services & Consulting</h2><a class="external-app-link btn btn-primary" 
             [href]="state.widgets.servicesConsulting" target="_blank">Go to Services</a>
         </div>
         <div class="description">Get help with all aspects of your digital journey</div>
