--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/page/head.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/page/head.html
@@ -69,7 +69,7 @@
     <meta data-sly-test="${(runmode.mode != 'prod') || (templateName == 'form-thank-you') || (templateName == 'form-thank-you2')}" name="robots" content="noindex, nofollow" >
     <meta data-sly-test="${(runmode.mode == 'prod') && (templateName != 'form-thank-you2') && (templateName != 'form-thank-you')}" name="robots" content="index, follow">
     <!--/* WEB-10136 - Add Swiftype specific meta tags -- Start */-->
-    <sly data-sly-use.pageModel="com.bmc.models.PageModel">
+    <sly data-sly-use.pageModel="com.bmc.models.bmcmeta.MetaTagModel">
         <sly data-sly-list.content="${pageModel.swiftTypeMetaMap}">
             <meta class="swiftype" name="${content}" data-type="string" content="${pageModel.swiftTypeMetaMap[content]}" />
         </sly>
