--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -665,7 +665,7 @@ body.no-scroll{
   .s-clock {
     background-image: url('#{$imagesFolder}s-clock-blue.svg');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 90%;
     width: 1.1rem;
     height: 1.1rem;    
   }
