Committing latest API Integration changes for Resource Section Component

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -18,38 +18,29 @@
 				<!--/*  Iterate through the cards for the multifield and fetch page properties  */-->
 				<sly data-sly-list.card="${productSet.resourceSectionCards}">
 					<div class="rc-card-col" style="padding-bottom:20px">
-
+						<sly data-sly-test.anchorCSS="${card.contentType == 'Videos' ? 'modal-video-player' : ''}"/>
 						<sly data-sly-test="${card.contentType == 'Videos'}">
 							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
-							<sly data-sly-test.anchorCSS="modal-video-player"/>
 							<sly data-sly-test.cardIcon="play"/>
-							<sly data-sly-test.cardCTA="Play"/>
 						</sly>
 						<sly data-sly-test="${card.contentText == 'demo'}">
 							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
-							<sly data-sly-test.anchorCSS=""/>
 							<sly data-sly-test.cardIcon="play"/>
-							<sly data-sly-test.cardCTA="Start"/>
 						</sly>
 						<sly data-sly-test="${card.contentText != 'play' && card.contentText != 'demo'}">
 							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
-							<sly data-sly-test.anchorCSS=""/>
 							<sly data-sly-test.cardIcon="view"/>
-							<sly data-sly-test.cardCTA="View"/>
 						</sly>
-						<sly data-sly-test.styleCss=""/>
-						<sly data-sly-test="${card.headerImage }">
-							<sly data-sly-test.styleCss="margin-top:127px"/>
-						</sly>
+
 
 						<a class="${anchorCSS}" href="${resolvedLink}">
 							<div class="simple-card bg-white">
-								<div class="card-header" style="${styleCss @ context='unsafe'}">
+								<div class="card-header">
 									<h4>${card.contentType}</h4>
 
-									<div data-sly-test="${card.headerImage != ''}" class="card-thumbnail" style="background: url(${card.headerImage @ context='uri'}) no-repeat center center / cover;">
+									<div data-sly-test="${card.headerImage}" class="card-thumbnail" style="background: url('${card.headerImage}') no-repeat center center / cover;">
 									</div>
-									<div data-sly-test="${card.headerImage == ''}" class="card-icon ic_${cardIcon}" alt="" border="0"></div>
+									<div data-sly-test="${!card.headerImage}" class="card-icon ic_${cardIcon}" alt="" border="0"></div>
 								</div>
 								<div class="card-content">
 									<hr/>
@@ -71,7 +62,7 @@
 										<svg class="align-middle s-${cardIcon}">
 											<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-${cardIcon}"></use>
 										</svg>
-										${cardCTA @ i18n}
+										${card.cardCTAText @ i18n}
 									</span>
 								</div>
 							</div>
