--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -666,8 +666,8 @@ body.no-scroll{
     background-image: url('#{$imagesFolder}s-clock-blue.svg');
     background-repeat: no-repeat;
     background-size: 90%;
-    width: 1.1rem;
-    height: 1.1rem;    
+    width: 20px;
+    height: 20px;    
   }
 
 
