--- a/front-end/Assets/src/css/modules/_fancybox.scss
+++ b/front-end/Assets/src/css/modules/_fancybox.scss
@@ -185,7 +185,7 @@
 	overflow: hidden;
 	position: absolute;
 	top: 0;
-	z-index: 8010;
+	z-index: 2147483648;
 
 	.no-rgba & {
 		background: rgb(0, 0, 0);
