DSCE-8402, Account info wrapper div

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-accountinfo-personalised/supportcentral-accountinfo-personalised.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcentral-accountinfo-personalised/supportcentral-accountinfo-personalised.html
@@ -9,15 +9,19 @@ data-sly-use.support="com.bmc.components.SupportCentral">
             </sly>
             <ul class="account-actions">
                 <sly data-sly-test="${loggedIn}">
-                <!--/* WEB-3150 Update header for Support pages START */-->
-                <li class="action"><a href="/available/manage-support-ids.html">Manage Support IDs</a></li>
-                <!--/* WEB-3150 Update header for Support pages END */-->
-                <li class="action"><a href="/available/edit-profile.html?c=n">Edit Profile</a></li>
-                <li class="action"><a href="/available/supportlogout.html">Logout</a></li>
+                <div class="psc-account-actions">
+	                <!--/* WEB-3150 Update header for Support pages START */-->
+	                <li class="action"><a href="/available/manage-support-ids.html">Manage Support IDs</a></li>
+	                <!--/* WEB-3150 Update header for Support pages END */-->
+	                <li class="action"><a href="/available/edit-profile.html?c=n">Edit Profile</a></li>
+	                <li class="action"><a href="/available/supportlogout.html">Logout</a></li>
+	            </div>
                 </sly>
                 <sly data-sly-test="${!loggedIn}">
-                <li class="action"><a href="/available/supportlogin.html">Login</a></li>
-                <li class="action"><a href="/available/register-now.html?c=n">Register</a></li>
+                	<div class="psc-account-actions">
+		                <li class="action"><a href="/available/supportlogin.html">Login</a></li>
+		                <li class="action"><a href="/available/register-now.html?c=n">Register</a></li>
+		            </div>
                 </sly>
                 <li class="action"><a class="alerts icon-caution js-fancyDialog" href="#">Alerts</a></li>
             </ul>
