--- a/front-end/Assets/src/css/modules/_support_personalized.scss
+++ b/front-end/Assets/src/css/modules/_support_personalized.scss
@@ -97,6 +97,10 @@
     min-height: 455px;
 }
 
+.psc-account-actions {
+	display: inline-block;
+}
+
 .psc-news {
 	.psc-section-heading {
 		margin-left: 15px;
