Added Class for Card Centre Layout and removed extra fields for Resource Section Component

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -6,7 +6,7 @@
 				<h2 class="h2-variation-1">${properties.rcTitle @ context='html'}</h2>
 				<h3 >${properties.rcSubTitle @ context='html'}</h3>
 			</div>
-			<div class="rc-card-row p1 py2">
+			<div class="rc-card-row p1 py2 flex-justify-center">
 				<!--/*  Handle layout of cards in Landscape
 				   <sly data-sly-test.assetClass="col col-12 sm-col-6 md-col-6 lg-col-3"></sly>
 				   <sly data-sly-test="${properties.numberOfCards == '3'}">
