DSCE-8453 Services & Consulting link fix

--- a/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
+++ b/front-end/Assets/src/support-central-angular/src/app/services-and-consulting/services-and-consulting.component.html
@@ -15,7 +15,7 @@
                 <h2>Upgrade to an enhanced support model</h2>
             </div>
         </a>
-        <a class="sac-link" target="_blank" href="https://www.bmc.com/education/courses/find-courses.html#filter/\{%22type%22:%22edu-specific-types-177151087%22}">
+        <a class="sac-link" target="_blank" href="https://www.bmc.com/education/courses/find-courses.html#filter/%7B%22type%22%3A%22edu-specific-types-177151087%22%7D">
             <div class="left">
                 <img src="/content/dam/bmc/support/education.png">
             </div>
