--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -941,3 +941,53 @@ $bg-forrester-green: #16563F;
   padding-top: 15px;
   padding-right: 20px;
 }
+
+
+//service catalog html WEB-10110
+.service-catalog-results{
+  .rc-card-row{
+    .rc-card-col {
+      padding-bottom: 20px;
+    }
+    .card-content{
+      h4{
+        color: #414042;
+        font-size: 18px;
+      }
+      p {
+        font-size: 14px;
+      }
+    }
+    .card-footer {
+      display: flex;
+      justify-content: space-between;
+      line-height: 18px;
+      padding: 10px 20px;
+      border-top: none;      
+      font-size: 15px;
+      .card-footer-action {
+          border-top: none;
+          padding: 0;
+          font-size: 15px;
+      }
+      .card-footer-logo {
+        padding: 0;
+        font-size: 15px;
+        font-weight: 600;
+      }
+      hr{
+        background: #3980B2;
+        margin: auto;
+        position: absolute;
+        width: 100%;
+        left: 0;
+        right: 0;
+        top: 0;
+        max-width: 90%;
+        border: none;
+        height: 1px;
+      }
+    }
+  }   
+
+}
