--- a/front-end/Assets/src/css/modules/_all.scss
+++ b/front-end/Assets/src/css/modules/_all.scss
@@ -107,5 +107,6 @@
 @import "landingPage";
 
 @import "webinars";
-@import "video-header-variation1"
+@import "video-header-variation1";
+@import "sticky-bar";
 
