--- a/front-end/Assets/src/css/modules/_content-table.scss
+++ b/front-end/Assets/src/css/modules/_content-table.scss
@@ -46,7 +46,7 @@
     line-height: 28px;
  }
 
-.jumbotron {
+.jumbotronctm{
     padding: 30px 0;
     @media (min-width: 767px) {
         padding: 50px 0;
