Fixed Webinar repeated link issue for cards.

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -27,6 +27,10 @@
 							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 							<sly data-sly-test.cardIcon="play"/>
 						</sly>
+						<sly data-sly-test="${card.contentType == 'Webinar'}">
+							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
+							<sly data-sly-test.cardIcon="play"/>
+						</sly>
 						<sly data-sly-test="${card.contentText != 'play' && card.contentText != 'demo'}">
 							<sly data-sly-test.resolvedLink="${card.pagePath}"></sly>
 							<sly data-sly-test.cardIcon="view"/>
